# agent

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  tools.py  web_crawler.py
internal/: cli.py  logger.py  ollama.py  prompts.py
internal/co_agents/: browser_use_agent.py
internal/services/: circle_ui.py  voice_manager.py
internal/tools/: __init__.py  basic_tools.py  file_tools.py  interactive_tools.py  python_tools.py  stock_market_tools.py  tools.py  voice_manager.py  website_tools.py
~/Desktop/article/: article.md
