[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.2",
    "python-dotenv>=1.1.1",
    "selenium>=4.34.2",
    "setuptools>=80.9.0",
    "speechrecognition>=3.14.3",
    "tzlocal>=5.3.1",
    "undetected-chromedriver>=3.5.5",
]
